# octetmc

./: Cargo.toml
examples/: superflat.rs
octetmc/: Cargo.toml
octetmc-chunksection/: Cargo.toml
octetmc-chunksection/src/: dirty.rs  edit.rs  iter.rs  lib.rs
octetmc-generated/: .gitignore  Cargo.toml
octetmc-generated/src/: download_server_jar.rs  get_server_jar_url.rs  get_version_info.rs  main.rs  run_datagen.rs
octetmc-generated/src/deobfuscate/: mapper.rs  mod.rs
octetmc-generated/src/generate/: blocks.rs  mod.rs  packets.rs  registries.rs
octetmc-generated/src/generate/data/: damage_type.rs  dimension_type.rs  mod.rs  painting_variant.rs  simple_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
octetmc-generated/src/generate/data/worldgen/: biome.rs  mod.rs
octetmc-generated/src/util/: mod.rs  one_or_many.rs
octetmc-macros/: Cargo.toml
octetmc-macros/src/: ident_inner.rs  lib.rs
octetmc-protocol/: Cargo.toml
octetmc-protocol/docs-rs/: build_docs.sh  trait-tags.html
octetmc-protocol/src/: lib.rs
octetmc-protocol/src/.generated/: version.rs
octetmc-protocol/src/packet/: decode.rs  mod.rs  prefix_check.rs  reader.rs
octetmc-protocol/src/packet/.generated/: prefix_check_config_c2s.rs  prefix_check_config_s2c.rs  prefix_check_handshake_c2s.rs  prefix_check_login_c2s.rs  prefix_check_login_s2c.rs  prefix_check_play_c2s.rs  prefix_check_play_s2c.rs  prefix_check_status_c2s.rs  prefix_check_status_s2c.rs
octetmc-protocol/src/packet/config/: mod.rs
octetmc-protocol/src/packet/config/c2s/: client_information.rs  custom_payload.rs  finish_configuration.rs  mod.rs  select_known_packs.rs
octetmc-protocol/src/packet/config/s2c/: custom_payload.rs  finish_configuration.rs  mod.rs  registry_data.rs  select_known_packs.rs
octetmc-protocol/src/packet/decode/: mod.rs  num.rs  option.rs  str.rs  string.rs
octetmc-protocol/src/packet/encode/: mod.rs  num.rs  option.rs  refs.rs  str.rs
octetmc-protocol/src/packet/handshake/: mod.rs
octetmc-protocol/src/packet/handshake/c2s/: intention.rs  mod.rs
octetmc-protocol/src/packet/login/: mod.rs
octetmc-protocol/src/packet/login/c2s/: hello.rs  key.rs  login_acknowledged.rs  mod.rs
octetmc-protocol/src/packet/login/s2c/: hello.rs  login_compression.rs  login_finished.rs  login_success.rs  mod.rs
octetmc-protocol/src/packet/play/: mod.rs
octetmc-protocol/src/packet/play/c2s/: mod.rs
octetmc-protocol/src/packet/play/s2c/: add_entity.rs  bundle_delimiter.rs  game_event.rs  login.rs  mod.rs  respawn.rs  set_chunk_cache_centre.rs  set_chunk_cache_radius.rs
octetmc-protocol/src/packet/status/: mod.rs
octetmc-protocol/src/packet/status/c2s/: mod.rs  ping_request.rs  status_request.rs
octetmc-protocol/src/packet/status/s2c/: mod.rs  ping_response.rs  pong_response.rs  status_response.rs
octetmc-protocol/src/registry/: biome.rs  block.rs  cat_variant.rs  chicken_variant.rs  cow_variant.rs  damage_type.rs  dimension_type.rs  frog_variant.rs  mod.rs  painting_variant.rs  pig_variant.rs  simple_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
octetmc-protocol/src/registry/.generated/: blocks.rs
octetmc-protocol/src/registry/.generated/data/: cat_variant.rs  chicken_variant.rs  cow_variant.rs  damage_type.rs  dimension_type.rs  frog_variant.rs  painting_variant.rs  pig_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
octetmc-protocol/src/registry/.generated/data/worldgen/: biome.rs
octetmc-protocol/src/registry/worldgen/: biome.rs  mod.rs
octetmc-protocol/src/value/: block_pos.rs  block_state.rs  channel_data.rs  character_id.rs  character_pos.rs  character_vel.rs  chunk_pos.rs  chunk_section_pos.rs  dim_block_pos.rs  entity_type.rs  game_mode.rs  ident.rs  known_pack.rs  mod.rs  particle.rs  profile.rs  rgb.rs  sound_event.rs  varint.rs
octetmc-protocol/src/value/.generated/: blocks.rs  entity_type.rs
octetmc-protocol/src/value/client_info/: chat_mode.rs  main_hand.rs  mod.rs  particle_status.rs  skin_parts.rs
octetmc-protocol/src/value/ident/: constructor.rs  mod.rs  serde_endec.rs  static_owned.rs  validate.rs
octetmc-protocol/src/value/item_slot/: component.rs  component_type.rs  item.rs  mod.rs
octetmc-protocol/src/value/nbt/: compound.rs  element.rs  mod.rs  tag.rs
octetmc-protocol/src/value/text/: argb_colour.rs  basic_colour.rs  click_event.rs  colour.rs  component.rs  content.rs  hover_event.rs  interact.rs  mod.rs  style.rs
octetmc/docs-rs/: build_docs.sh  trait-tags.html
octetmc/examples/: superflat.rs
octetmc/src/: lib.rs
octetmc/src/conn/: comms.rs  config_play.rs  error.rs  handshake.rs  login.rs  mod.rs  state.rs  status.rs
octetmc/src/conn/comms/: mod.rs  read.rs  write.rs
octetmc/src/conn/comms/read/: boxed.rs  content.rs  decode.rs  len.rs  mod.rs
octetmc/src/conn/config_play/: action.rs  config.rs  mod.rs  play.rs
octetmc/src/conn/config_play/event/: mod.rs
octetmc/src/conn/config_play/in_message/: mod.rs
octetmc/src/conn/config_play/out_message/: mod.rs
octetmc/src/conn/event/: mod.rs
octetmc/src/player/: info.rs  login.rs  mod.rs  profile.rs
octetmc/src/player/login/: auto_login.rs  kick_dupes.rs  mod.rs
octetmc/src/registry/: biome.rs  damage_type.rs  mod.rs  painting_variant.rs  simple_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
octetmc/src/server/: favicon.rs  mod.rs
octetmc/src/util/: dirty.rs  macros.rs  mod.rs  read_write_iter.rs
octetmc/src/util/ecs/: mod.rs  parallel_event_writer.rs
octetmc/src/util/future/: mod.rs  timeout.rs
octetmc/src/world/: biome.rs  dimension.rs  mod.rs
octetmc/src/world/chunk/: mod.rs  section.rs
octetmc/src/world/chunk/section/: edit.rs  iter.rs  mod.rs
octetmc/src/world/generator/: mod.rs  superflat.rs  void.rs
src/: lib.rs  macros.rs
src/conn/: mod.rs
src/player/: mod.rs
src/server/: mod.rs
