[package]
name         = "octetmc-chunksection"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Event-driven Minecraft server library running on Bevy ECS (Chunk Sections)"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "event", "bevy", "ecs" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[profile.dev]
opt-level        = 3
debug-assertions = false
overflow-checks  = false
lto              = "fat"
codegen-units    = 1

[profile.release]
opt-level        = 3
debug-assertions = false
overflow-checks  = false
lto              = "fat"
incremental      = false
codegen-units    = 1



[lints.rust]
unused_parens = "allow"


[dependencies.octetmc-protocol]
path     = "../octetmc-protocol"
features = [ "bevy_ecs" ]

# Data Packing
[dependencies.bitptr]
version = "0.1"

# ECS
[dependencies.bevy_app]
version          = "0.16"
default-features = false
[dependencies.bevy_ecs]
version          = "0.16"
default-features = false
