[package]
name         = "octetmc-generated"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Minecraft datagen"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "datagen" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[lints.rust]
unused_parens = "allow"


[dependencies.smol]
version = "2.0"

[dependencies.surf]
version = "2.3"

[dependencies.serde]
version = "1.0"
[dependencies.serde_json]
version = "1.0"

[dependencies.convert_case]
version = "0.8"
