[package]
name         = "octetmc-protocol"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Async Minecraft server protocol library"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "event", "bevy", "ecs" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[features]

mc-1_21_5 = [
    "__mc-1_21_5-or_later",
    "__mc-1_21_5-or_earlier",
]
__mc-1_21_5-or_later   = [  ]
__mc-1_21_5-or_earlier = [  ]


[lints.rust]
unused_parens = "allow"


[dependencies.semver]
version = "1.0"

[dependencies.uuid]
version          = "1.17"
default-features = false
[dependencies.cesu8]
version = "1.1"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]
[dependencies.serde_json]
version = "1.0"

[dependencies.const_panic]
version = "0.2"
