[package]
name         = "octetmc-protocol"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Async Minecraft server protocol library"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "event", "bevy", "ecs" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[package.metadata.docs.rs]
rustc-args   = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    "--cfg", "docsrs_dep",
    "--html-after-content", "docs-rs/trait-tags.html",
]
all-features = true


[features]

mc-1_21_5 = [
    "__mc-1_21_5-or_later",
    "__mc-1_21_5-or_earlier",
]
__mc-1_21_5-or_later   = [  ]
__mc-1_21_5-or_earlier = [  ]


[lints.rust]
unused_parens = "allow"


[dependencies.octetmc-macros]
path = "../octetmc-macros"

[dependencies.semver]
version = "1.0"

[dependencies.uuid]
version          = "1.17"
default-features = false
[dependencies.cesu8]
version = "1.1"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]
[dependencies.serde_json]
version = "1.0"

[dependencies.compile-fmt]
version = "0.1"
