[package]
name         = "octetmc"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Event-driven Minecraft server library running on Bevy ECS"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "event", "bevy", "ecs" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.89"


[lints.rust]
unused_parens = "allow"


[dependencies.octetmc-protocol]
path = "../octetmc-protocol"

# Async
[dependencies.smol]
version = "2.0"
[dependencies.pin-project]
version = "1.1"
[dependencies.futures]
version = "0.3"

# ECS
[dependencies.bevy_ecs]
version = "0.16"
[dependencies.bevy_app]
version = "0.16"
[dependencies.bevy_time]
version = "0.16"
[dependencies.bevy_diagnostic]
version = "0.16"
[dependencies.bevy_defer]
version = "0.14"

# Favicon handling
[dependencies.image]
version = "0.25"
[dependencies.base64]
version = "0.22"

# Compression & Encryption
[dependencies.flate2]
version = "1.1"
[dependencies.rand]
version = "0.9"
[dependencies.openssl]
version = "0.10"
[dependencies.hex]
version = "0.4"
[dependencies.surf]
version = "2.3"
