[package]
name         = "octetmc"
version      = "0.1.0"
authors      = ["Totobird <https://github.com/Totobird-Creations>"]
description  = "Event-driven Minecraft server library running on Bevy ECS"
license      = "LGPL-3.0-only"

readme       = "README.md"
repository   = "https://github.com/Totobird-Creations/octetmc"

keywords     = [ "octetmc", "minecraft", "event", "bevy", "ecs" ]
categories   = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[package.metadata.docs.rs]
rustc-args   = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    "--cfg", "docsrs_dep",
    "--html-after-content", "docs-rs/trait-tags.html",
]
all-features = true


[profile.dev.package.octetmc-chunksection]
opt-level        = 3
debug-assertions = false
overflow-checks  = false
incremental      = false
codegen-units    = 1

[profile.release.package.octetmc-chunksection]
opt-level        = 3
debug-assertions = false
overflow-checks  = false
incremental      = false
codegen-units    = 1


[lints.rust]
unused_parens = "allow"


[dependencies.octetmc-chunksection]
path     = "../octetmc-chunksection"
[dependencies.octetmc-protocol]
path     = "../octetmc-protocol"
features = [ "bevy_ecs" ]

# Async
[dependencies.smol]
version = "2.0"
[dependencies.pin-project-lite]
version = "0.2"
[dependencies.futures]
version          = "0.3"
default-features = false
features         = [ "async-await" ]

# ECS
[dependencies.bevy_app]
version          = "0.16"
default-features = false
[dependencies.bevy_ecs]
version          = "0.16"
default-features = false
features         = [ "multi_threaded" ]
[dependencies.bevy_time]
version          = "0.16"
default-features = false
[dependencies.bevy_diagnostic]
version          = "0.16"
default-features = false
[dependencies.bevy_defer]
version          = "0.14"
default-features = false

# Favicon handling
[dependencies.image]
version = "0.25"
[dependencies.base64]
version = "0.22"

# Compression & Encryption
[dependencies.flate2]
version = "1.1"
[dependencies.rand]
version          = "0.9"
default-features = false
features         = [ "thread_rng" ]
[dependencies.openssl]
version = "0.10"

# Authentication
[dependencies.hex]
version          = "0.4"
default-features = false
[dependencies.ethnum]
version = "1.5"
[dependencies.surf]
version          = "2.3"
default-features = false
features         = [ "curl-client" ]
[dependencies.serde]
version = "1.0"
[dependencies.uuid]
version          = "1.17"
default-features = false
features         = [ "v3" ]
